// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`modus-wc-menu-item renders with default props 1`] = `
<modus-wc-menu-item label="Test label" value="Test value">
  <!---->
  <li class="modus-wc-menu-item modus-wc-menu-item-md" role="menuitem" tabindex="0">
    <button tabindex="-1" type="button">
      <div class="modus-wc-menu-item-content">
        <div class="modus-wc-menu-item-labels">
          <div>
            Test label
          </div>
        </div>
      </div>
    </button>
  </li>
</modus-wc-menu-item>
`;

exports[`modus-wc-menu-item should render with a start-icon slot 1`] = `
<modus-wc-menu-item label="Test label" value="Test value">
  <!---->
  <li class="modus-wc-menu-item modus-wc-menu-item-md" role="menuitem" tabindex="0">
    <button tabindex="-1" type="button">
      <div class="modus-wc-menu-item-content">
        <modus-wc-icon class="modus-wc-flex modus-wc-items-center" name="check" slot="start-icon">
          <i aria-hidden="true" class="modus-icons modus-wc-icon modus-wc-icon--md" tabindex="-1">
            check
          </i>
        </modus-wc-icon>
        <div class="modus-wc-menu-item-labels">
          <div>
            Test label
          </div>
        </div>
      </div>
    </button>
  </li>
</modus-wc-menu-item>
`;

exports[`modus-wc-menu-item should render with checkbox 1`] = `
<modus-wc-menu-item checkbox="true" label="Test label" value="Test value">
  <!---->
  <li class="modus-wc-menu-item modus-wc-menu-item-md" role="menuitem" tabindex="0">
    <button tabindex="-1" type="button">
      <div class="modus-wc-menu-item-content">
        <modus-wc-checkbox aria-label="Checkbox" size="md"></modus-wc-checkbox>
        <div class="modus-wc-menu-item-labels">
          <div>
            Test label
          </div>
        </div>
      </div>
    </button>
  </li>
</modus-wc-menu-item>
`;

exports[`modus-wc-menu-item should render with checkbox and selected 1`] = `
<modus-wc-menu-item checkbox="true" label="Test label" selected="true" value="Test value">
  <!---->
  <li aria-current="" class="modus-wc-menu-item modus-wc-menu-item-md modus-wc-menu-item-selected" role="menuitem" tabindex="0">
    <button tabindex="-1" type="button">
      <div class="modus-wc-menu-item-content">
        <modus-wc-checkbox aria-label="Checkbox" size="md" value=""></modus-wc-checkbox>
        <div class="modus-wc-menu-item-labels">
          <div>
            Test label
          </div>
        </div>
      </div>
    </button>
  </li>
</modus-wc-menu-item>
`;

exports[`modus-wc-menu-item should render with custom props 1`] = `
<modus-wc-menu-item bordered="true" custom-class="test-class" disabled="true" label="Test label" selected="true" size="lg" sub-label="Test sub-label" value="Test value">
  <!---->
  <li aria-current="" aria-disabled="" class="modus-wc-menu-item modus-wc-menu-item-bordered modus-wc-menu-item-disabled modus-wc-menu-item-lg modus-wc-menu-item-selected test-class" role="menuitem" tabindex="-1">
    <button disabled="" tabindex="-1" type="button">
      <div class="modus-wc-menu-item-content">
        <div class="modus-wc-menu-item-labels">
          <div>
            Test label
          </div>
          <div class="modus-wc-menu-item-sublabel">
            Test sub-label
          </div>
        </div>
      </div>
    </button>
  </li>
</modus-wc-menu-item>
`;

exports[`modus-wc-menu-item should render with size lg 1`] = `
<modus-wc-menu-item label="Test label" selected="true" size="lg" value="Test value">
  <!---->
  <li aria-current="" class="modus-wc-menu-item modus-wc-menu-item-lg modus-wc-menu-item-selected" role="menuitem" tabindex="0">
    <button tabindex="-1" type="button">
      <div class="modus-wc-menu-item-content">
        <div class="modus-wc-menu-item-labels">
          <div>
            Test label
          </div>
        </div>
      </div>
    </button>
  </li>
</modus-wc-menu-item>
`;

exports[`modus-wc-menu-item should render with size md 1`] = `
<modus-wc-menu-item label="Test label" selected="true" size="md" value="Test value">
  <!---->
  <li aria-current="" class="modus-wc-menu-item modus-wc-menu-item-md modus-wc-menu-item-selected" role="menuitem" tabindex="0">
    <button tabindex="-1" type="button">
      <div class="modus-wc-menu-item-content">
        <div class="modus-wc-menu-item-labels">
          <div>
            Test label
          </div>
        </div>
      </div>
    </button>
  </li>
</modus-wc-menu-item>
`;

exports[`modus-wc-menu-item should render with size sm 1`] = `
<modus-wc-menu-item label="Test label" selected="true" size="sm" value="Test value">
  <!---->
  <li aria-current="" class="modus-wc-menu-item modus-wc-menu-item-selected modus-wc-menu-item-sm" role="menuitem" tabindex="0">
    <button tabindex="-1" type="button">
      <div class="modus-wc-menu-item-content">
        <div class="modus-wc-menu-item-labels">
          <div>
            Test label
          </div>
        </div>
      </div>
    </button>
  </li>
</modus-wc-menu-item>
`;

exports[`modus-wc-menu-item should render with tooltip 1`] = `
<modus-wc-menu-item label="Test label" tooltip-content="Test tooltip" value="Test value">
  <!---->
  <li class="modus-wc-menu-item modus-wc-menu-item-md" role="menuitem" tabindex="0">
    <button tabindex="-1" type="button">
      <div class="modus-wc-menu-item-content">
        <div class="modus-wc-menu-item-labels">
          <modus-wc-tooltip content="Test tooltip" customclass="modus-wc-menu-item-tooltip" position="auto">
            <div>
              Test label
            </div>
          </modus-wc-tooltip>
        </div>
      </div>
    </button>
  </li>
</modus-wc-menu-item>
`;
